--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -2,6 +2,7 @@
 body {
     color: #5A5A5A;
     padding-bottom: 40px;
+    background-color:#B0F2A6 !important;
 }
 .navbar-wrapper {
     left: 0;
@@ -22,15 +23,21 @@ body {
     width: auto;
 }
 body .navbar-inverse {
-    background-color: #ABBF78;
-    border-color: #A1B084;
+    background-color: #159117;
+    border-color: #047604;
 }
 body .navbar-inverse .navbar-nav > .active > a,
 body .navbar-inverse .navbar-nav > .active > a:hover,
 body .navbar-inverse .navbar-nav > .active > a:focus {
-    background-color: #A1B084;
+    background-color: #2EAB2E;
     color: #FFFFFF;
 }
+
+body .navbar-inverse .navbar-toggle:hover,
+body .navbar-inverse .navbar-toggle:focus {
+    background-color: #2EAB2E;
+}
+
 body .navbar-inverse .navbar-nav > li > a {
     color:#FFFFFF;
 }
@@ -38,7 +45,7 @@ body .navbar-inverse .navbar-brand {
     color:#FFFFFF;
 }
 .carousel {
-    height: 500px;
+    height: 300px;
     margin-bottom: 60px;
 }
 .carousel-caption {
@@ -46,14 +53,55 @@ body .navbar-inverse .navbar-brand {
 }
 .carousel .item {
     background-color: #777777;
-    height: 500px;
+    height: 300px;
 }
 .carousel-inner > .item > img {
-    height: 500px;
     left: 0;
     min-width: 100%;
     position: absolute;
     top: 0;
+}
+body .carousel-control .glyphicon-chevron-left {
+    margin-left:-17px;
+}
+body .carousel-control.right {
+    right:15px;
+}
+body .carousel-control .glyphicon-chevron-left,
+body .carousel-control .glyphicon-chevron-right {
+    font-size:20px;
+    margin-top:-10px;
+}
+body .carousel-control {
+    background: none repeat scroll 0 0 #222222;
+    border: 3px solid #ffffff;
+    border-radius: 23px;
+    font-weight: 100;
+    height: 40px;
+    line-height: 30px;
+    margin-top: 15px;
+    top: 40%;
+    width: 40px;
+    left:15px;
+    xdisplay:none;
+    -webkit-opacity: 0;
+    -moz-opacity: 0;
+    opacity: 0;
+}
+body .carousel:hover .carousel-control {
+    display:block;
+    opacity:0.5;
+    -webkit-transition: all 0s ease 3s;
+    -moz-transition: all 0s ease 3s;
+    -ms-transition: all 0s ease 3s;
+    -o-transition: all 0s ease 3s;
+    transition: all 0s ease 3s;
+}
+body .marketing .row {
+    margin-bottom:35px;
+}
+body .carousel-control:hover {
+    opacity:1.0;
 }
 .marketing .col-lg-4 {
     margin-bottom: 20px;
@@ -66,14 +114,7 @@ body .navbar-inverse .navbar-brand {
     margin-left: 10px;
     margin-right: 10px;
 }
-.featurette-divider {
-    margin: 80px 0;
-}
-.featurette-heading {
-    font-weight: 300;
-    letter-spacing: -1px;
-    line-height: 1;
-}
+
 @media (min-width: 768px) {
     .navbar-wrapper {
         margin-top: 20px;
@@ -93,13 +134,5 @@ body .navbar-inverse .navbar-brand {
         font-size: 21px;
         line-height: 1.4;
         margin-bottom: 20px;
-    }
-    .featurette-heading {
-        font-size: 50px;
-    }
-}
-@media (min-width: 992px) {
-    .featurette-heading {
-        margin-top: 120px;
     }
 }
