--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -48,7 +48,7 @@ body .navbar-inverse .navbar-brand {
     color:#FFFFFF;
 }
 body .navbar-brand img {
-    margin-top:-15px;
+    margin-top:-6px;
 }
 .carousel {
     height: 300px;
@@ -171,5 +171,33 @@ body .carousel .carousel-control:hover {
         font-size: 21px;
         line-height: 1.4;
         margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 992px) {
+    .carousel .carousel-inner .item img {
+        top:-200px !important;
+    }
+
+    .carousel .carousel-inner .item:first-child img {
+        top:-172px !important;
+    }
+
+    .carousel .carousel-inner .item:last-child img {
+        top:-145px !important;
+    }
+}
+
+@media (max-width: 768px) {
+    body .marketing {
+        margin-top:60px;
+    }
+
+    .carousel {
+        display:none;
+    }
+
+    body .marketing .row > div {
+        border:medium none;
     }
 }
